--- a/lesson_6/css/style.css
+++ b/lesson_6/css/style.css
@@ -113,7 +113,7 @@ footer{
     min-height: 50%;
     color: #fff;
 }
-#footer-title{
+.footer-title{
     font-weight: 700;
     font-size: 40px;
     line-height: 48px;
