--- a/lesson_10/css/style.css
+++ b/lesson_10/css/style.css
@@ -86,7 +86,6 @@
 
 /* додаємо позиціонування для елементу "згадуємо правила методології BEM, що для блоку не задають відступи та позиціонування, це робиться для елементу чи модифікатору" */
 .menu__menu-sub{
-  border-radius: 8px 8px 8px 8px;
   position: relative;
   position: absolute;
   top: 150%;
@@ -96,6 +95,7 @@
 
 /* стилі для блоку .sub-menu */
 .sub-menu {
+  height: 100%;
   min-width: 311px;
   vertical-align: middle;
   color: #2b2929;
@@ -106,15 +106,6 @@
   visibility: hidden;
   opacity: 0;
 }
-
-.menu__menu-sub .sub-menu__item:first-child{
-  padding: 8px 0px 0px 0px;
-}
-.menu__menu-sub .sub-menu__item:last-child{
-  padding: 0px 0px 8px 0px;
-}
-
-/* додаємо псевдоелемент "підкладку" для того щоб при переміщенні курсору не на підменю воно не зникало, щоб зрозуміти про що я пишу закоментуйте content: ""; ⬇️ */
 .sub-menu::before {
   content: "";
   position: absolute;
@@ -126,7 +117,8 @@
 }
 .sub-menu__item{
   min-width: 311px;
-  min-width: 311px;
+  min-height: 60px;
+
 }
 .sub-menu__item:hover .sub-menu__link{
   background-color: #ffbc57;
@@ -134,15 +126,14 @@
 .sub-menu__link--border-radius{
   border-radius: 8px 8px 0px 0px;
 }
-.sub-menu__link a:last-child{
-  border-radius: 0px 0px 8px 8px;
-}
+
 .sub-menu__link{
     background-color: #fff;
     display: inline-block;
     vertical-align: middle;
     padding: 10px 15px 10px 30px;
     width: 100%;
+    min-height: 60px;
 }
 .sub-menu__span{
   padding-left: 15px;
@@ -173,11 +164,6 @@
   z-index: 2;
 }
 
-/* стилі для стану hover при наведені на пункт меню змінюємо колір для посилання */
-.menu__item:hover .menu__link{
-  color: black;
-  
-}
 
 /* показуємо підменю при наведені на потрібний пункт меню */
 .menu__item:hover .sub-menu {
@@ -185,52 +171,55 @@
   opacity: 1;
 }
 
-/* задаєм відступ пунктам окрім останнього */
-.sub-menu__item:not(:last-child) {
-
-}
-
-/* стилі для стану hover */
-.sub-menu__link:hover {
- 
-
- }
-.sub-menu__dropdown{
-  padding: 20px;
-  position: absolute;
-  top: 0%;
-  left: 100%;
-}
-
 .dropdown{
   height: 100%;
+  background-color: pink;
   min-width: 311px;
   vertical-align: middle;
-  border-radius: 8px 8px 8px 8px;
   color: #2b2929;
   font-size: 20px;
   line-height: 28px;
   text-transform: capitalize;
-  background-color: #fff;
 /*  приховуємо меню ⬇️  */
   visibility: hidden;
   opacity: 0;
 }
+.sub-menu__dropdown{
+  position: absolute;
+  top: 18%;
+  left: 100%;
+}
+.dropdown__item{
+  min-width: 311px;
+  min-height: 60px;
+  background-color: #fff;
+  margin-bottom: 0px;
+}
+.dropdown__item:hover .dropdown__link{
+  background-color: #ffbc57;
+}
+.dropdown__link{
+  vertical-align: top;
+  padding: 11px 20px;
+  color: #2b2929;
+  font-size: 19px;
+  line-height: 24px;
+  min-width: 100%;
+  min-height: 60px; 
+}
+.dropdown__link--border-radius{
+  border-radius: 8px 8px 0px 0px;
+}
 
+
+.menu__menu-sub .sub-menu__item:first-child{
+  padding: 8px 0px 0px 0px;
+}
 
 /* показуємо підменю при наведені на потрібний пункт меню */
 #block-1:hover .dropdown {
   visibility: visible;
   opacity: 1;
-}
-.dropdown__item{
-  color: #2b2929;
-  font-size: 19px;
-  font-weight: 400;
-  line-height: 40px;
-}
-.dropdown__item:not(:last-child) {
-	margin-bottom: 10px;
 }
 #block-2:hover .dropdown {
   visibility: visible;
@@ -252,54 +241,87 @@
   visibility: visible;
   opacity: 1;
 }
+#block-7:hover .dropdown {
+  visibility: visible;
+  opacity: 1;
+}
+#block-8:hover .dropdown {
+  visibility: visible;
+  opacity: 1;
+}
+#block-9:hover .dropdown {
+  visibility: visible;
+  opacity: 1;
+}
+#block-10:hover .dropdown {
+  visibility: visible;
+  opacity: 1;
+}
 /*page*/
 .page{
   background-color: hsl(0deg 0% 97%);
+  margin-top: 120px;
+  margin-bottom: 20px;
 }
 .page-container{
   width: 85%;
-  margin: 8% auto 2% auto;
+  margin: 0 auto;
 }
 .popular-categories{
 
 }
 .popular-categories__title{
-  margin-bottom: 20px;
+  padding: 10px 10px;
 }
+
 .title{
   font-size: 40px;
   font-weight: 600;
   line-height: 1.2;
   text-align: center;
 }
-.popular-categories__boxes{
-  font-size: 0px;
+.popular-categories__cards{
+  margin-left: -5px;
+  margin-right: -5px;
+  font-size: 0;
 }
-.popular-categories__boxes:not(:last-child) {
-  margin-bottom: 40px;
- }
-.popular-categories__box{
+.product-card__content{
   position: relative;
-  min-width: 250px;
-  border-radius: 8px 8px 8px 8px;
-  box-shadow: -3px 4px 15px 0 rgba(0,0,0,.06);
-  min-height: 300px;
+  padding: 20px;
   overflow: hidden;
-  padding: 5px 5px;
-  margin: 5px 3px;
 }
-.box{
-  display: inline-block;
+.popular-categories__title{
+  padding: 20px 0px;
 }
-.box:hover{
+.product-card__content:hover{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.box__arrow{
+.popular-categories__product{
+  width: 20%;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.product-card__semicircle{
+  position: absolute;
+  top: 40%;
+  left: -11%;
+  min-width: 120%;
+  border-radius: 70%;
+  background-color: hsla(0, 0%, 94%, 14.815);
+  min-height: 100%;
+  z-index: 0;
+}
+.product-card__img{
+  position: relative;
+ }
+ .product-card__arrow{
   position: absolute;
   top: 80%;
   right: 5%;
-}
-.box__number{
+ }
+.product-card__number{
   position: absolute;
   top: 5%;
   right: 5%;
@@ -307,8 +329,8 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 28px;
-}
-.box__title{
+ }
+.product-card__title{
   position: absolute;
   top: 5%;
   left: 5%;
@@ -316,22 +338,7 @@
   font-size: 20px;
   line-height: 28px;
   font-weight: 600;
-}
-.box__semicircle{
-  position: absolute;
-  top: 39%;
-  left: -12%;
-  min-width: 122%;
-  border-radius: 70%;
-  background-color: hsla(0, 0%, 94%, 14.815);
-  min-height: 100%;
- 
-}
-.box__img{
-  position: absolute;
-  top: 0%;
-  left: 0%;
-}
+ }
 .footer__title{
   margin-bottom: 20px;
 }
