--- a/lesson_18/css/style.css
+++ b/lesson_18/css/style.css
@@ -162,6 +162,11 @@ body::-webkit-scrollbar-thumb {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 50;
 }
+@media (max-width: 991.98px) {
+  .header {
+    padding-top: 40px;
+  }
+}
 .header__top {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -173,8 +178,42 @@ body::-webkit-scrollbar-thumb {
      -moz-column-gap: 20px;
           column-gap: 20px;
 }
+@media (max-width: 1199.98px) {
+  .header__top {
+    -webkit-column-gap: 10px;
+       -moz-column-gap: 10px;
+            column-gap: 10px;
+  }
+}
 .header__logo {
   padding: 10px;
+}
+@media (max-width: 479.98px) {
+  .header__logo {
+    -ms-flex-preferred-size: 155px;
+        flex-basis: 155px;
+  }
+  .header__logo img {
+    width: 100%;
+  }
+}
+@media (max-width: 991.98px) {
+  .menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 40%;
+    height: 100%;
+    visibility: hidden;
+    padding: 110px 20px 30px;
+    overflow-y: auto;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+    opacity: 0;
+  }
 }
 .menu__list {
   display: -webkit-box;
@@ -186,12 +225,27 @@ body::-webkit-scrollbar-thumb {
 }
 @media (max-width: 1199.98px) {
   .menu__list {
-    -webkit-column-gap: 10px;
-       -moz-column-gap: 10px;
-            column-gap: 10px;
+    -webkit-column-gap: 20px;
+       -moz-column-gap: 20px;
+            column-gap: 20px;
   }
 }
+@media (max-width: 991.98px) {
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+}
+.menu__item:not(:last-child) {
+  margin-bottom: 25px;
+}
 .menu__link {
+  font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   line-height: 20px;
@@ -199,12 +253,31 @@ body::-webkit-scrollbar-thumb {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-.menu__link:hover {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background-color: #6F00A9;
+@media (any-hover) {
+  .menu__link:hover {
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    background-color: #6F00A9;
+  }
+}
+@media (max-width: 991.98px) {
+  .menu__link {
+    font-size: 24px;
+  }
 }
 
+@media (max-width: 991.98px) {
+  .menu-icon {
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .social {
+    z-index: 10;
+  }
+}
 .social__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -215,6 +288,13 @@ body::-webkit-scrollbar-thumb {
   -webkit-column-gap: 19px;
      -moz-column-gap: 19px;
           column-gap: 19px;
+}
+@media (max-width: 1199.98px) {
+  .social__list {
+    -webkit-column-gap: 5px;
+       -moz-column-gap: 5px;
+            column-gap: 5px;
+  }
 }
 .social__item {
   padding: 10px;
@@ -254,128 +334,6 @@ body::-webkit-scrollbar-thumb {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
   }
-}
-
-.menu-icon {
-  display: none;
-}
-
-@media (max-width: 999.98px) {
-  .menu-open .menu {
-    right: 0;
-    opacity: 1;
-    visibility: visible;
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-  }
-  .header {
-    padding-top: 35px;
-  }
-  .menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 40%;
-    height: 100%;
-    visibility: hidden;
-    padding: 110px 20px 30px;
-    overflow-y: auto;
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-    background-color: rgba(0, 0, 0, 0.8);
-    -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
-    opacity: 0;
-  }
-  .social {
-    z-index: 10;
-  }
-  .menu__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-  }
-  .menu__item:not(:last-child) {
-    margin-bottom: 25px;
-  }
-}
-.menu__link {
-  font-size: 24px;
-}
-
-.menu-icon {
-  display: block;
-  position: relative;
-  height: 18px;
-  width: 30px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  z-index: 2;
-  -ms-flex-item-align: center;
-      align-self: center;
-}
-
-.menu-icon::before,
-.menu-icon::after,
-.menu-icon span {
-  content: "";
-  height: 2px;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background-color: #FFF;
-}
-
-.menu-icon::before {
-  top: 0;
-}
-
-.menu-icon::after {
-  bottom: 0;
-}
-
-.menu-icon span {
-  top: 50%;
-  -webkit-transform: translate(0px, -50%);
-      -ms-transform: translate(0px, -50%);
-          transform: translate(0px, -50%);
-}
-
-.midle-menu__items {
-  -webkit-column-gap: 10px;
-     -moz-column-gap: 10px;
-          column-gap: 10px;
-}
-
-.menu-open .menu-icon::before {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: 50%;
-  margin-top: -1px;
-}
-
-.menu-open .menu-icon::after {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-  bottom: 50%;
-  margin-bottom: -1px;
-}
-
-.menu-open .menu-icon span {
-  -webkit-transform: scale(0);
-      -ms-transform: scale(0);
-          transform: scale(0);
 }
 
 .page {
@@ -425,6 +383,11 @@ body::-webkit-scrollbar-thumb {
             transform: translate(-300%, 0%);
   }
 }
+@media (max-width: 767.98px) {
+  .hero__container::after {
+    display: none;
+  }
+}
 .hero__container::before {
   content: "";
   position: absolute;
@@ -468,6 +431,11 @@ body::-webkit-scrollbar-thumb {
             transform: translate(300%, 0%);
   }
 }
+@media (max-width: 767.98px) {
+  .hero__container::before {
+    display: none;
+  }
+}
 .hero__wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -484,12 +452,23 @@ body::-webkit-scrollbar-thumb {
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
 }
+@media (max-width: 767.98px) {
+  .hero__content {
+    gap: 0px;
+  }
+}
 
 .hero--margin {
   padding-top: 120px;
   overflow: hidden;
   position: relative;
   z-index: 10;
+}
+@media (max-width: 767.98px) {
+  .hero--margin {
+    padding-top: 50px;
+    padding-bottom: 10px;
+  }
 }
 
 .content-hero {
@@ -504,6 +483,11 @@ body::-webkit-scrollbar-thumb {
       -ms-flex-pack: start;
           justify-content: flex-start;
   gap: 20px;
+}
+@media (max-width: 479.98px) {
+  .content-hero {
+    gap: 1px;
+  }
 }
 .content-hero__name {
   font-family: "Exo", sans-serif;
@@ -545,6 +529,11 @@ body::-webkit-scrollbar-thumb {
 @media (max-width: 20em) {
   .content-hero__title {
     font-size: 2rem;
+  }
+}
+@media (max-width: 479.98px) {
+  .content-hero__title {
+    line-height: 35px;
   }
 }
 .content-hero__button {
@@ -651,6 +640,108 @@ body::-webkit-scrollbar-thumb {
   position: relative;
   z-index: 2;
 }
+@media (max-width: 479.98px) {
+  .media__photo-people {
+    width: 30%;
+    margin: 0 auto;
+  }
+  .media__photo-people img {
+    width: 100%;
+  }
+}
+@media (max-width: 767.98px) {
+  .media__photo-people {
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px 0px;
+  }
+  .media__photo-people::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 280px;
+    height: 280px;
+    background: -webkit-gradient(linear, left top, right top, from(hsla(276, 100%, 50%, 0.6)), color-stop(36.9%, hsla(104, 100%, 55%, 0.6)), color-stop(67.4%, hsla(0, 100%, 50%, 0.6)), to(hsla(227, 100%, 50%, 0.6)));
+    background: linear-gradient(90deg, hsla(276, 100%, 50%, 0.6) 0%, hsla(104, 100%, 55%, 0.6) 36.9%, hsla(0, 100%, 50%, 0.6) 67.4%, hsla(227, 100%, 50%, 0.6) 100%);
+    opacity: 0.3;
+    -webkit-filter: blur(40px);
+            filter: blur(40px);
+    -webkit-animation: circular-motion-top 10s linear infinite;
+            animation: circular-motion-top 10s linear infinite;
+  }
+  @-webkit-keyframes circular-motion-top {
+    0% {
+      -webkit-transform: translate(0, 0);
+              transform: translate(0, 0);
+    }
+    50% {
+      -webkit-transform: translate(100%, -25%);
+              transform: translate(100%, -25%);
+    }
+    100% {
+      -webkit-transform: translate(-100%, 0%);
+              transform: translate(-100%, 0%);
+    }
+  }
+  @keyframes circular-motion-top {
+    0% {
+      -webkit-transform: translate(0, 0);
+              transform: translate(0, 0);
+    }
+    50% {
+      -webkit-transform: translate(100%, -25%);
+              transform: translate(100%, -25%);
+    }
+    100% {
+      -webkit-transform: translate(-100%, 0%);
+              transform: translate(-100%, 0%);
+    }
+  }
+  .media__photo-people::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 280px;
+    height: 280px;
+    background: -webkit-gradient(linear, left top, right top, from(hsla(276, 100%, 50%, 0.6)), color-stop(36.9%, hsla(104, 100%, 55%, 0.6)), color-stop(67.4%, hsla(0, 100%, 50%, 0.6)), to(hsla(227, 100%, 50%, 0.6)));
+    background: linear-gradient(90deg, hsla(276, 100%, 50%, 0.6) 0%, hsla(104, 100%, 55%, 0.6) 36.9%, hsla(0, 100%, 50%, 0.6) 67.4%, hsla(227, 100%, 50%, 0.6) 100%);
+    opacity: 0.3;
+    -webkit-filter: blur(40px);
+            filter: blur(40px);
+    -webkit-animation: circular-motion-bottom 15s linear infinite;
+            animation: circular-motion-bottom 15s linear infinite;
+  }
+  @-webkit-keyframes circular-motion-bottom {
+    0% {
+      -webkit-transform: translate(0, 0);
+              transform: translate(0, 0);
+    }
+    50% {
+      -webkit-transform: translate(-100%, 25%);
+              transform: translate(-100%, 25%);
+    }
+    100% {
+      -webkit-transform: translate(100%, 0%);
+              transform: translate(100%, 0%);
+    }
+  }
+  @keyframes circular-motion-bottom {
+    0% {
+      -webkit-transform: translate(0, 0);
+              transform: translate(0, 0);
+    }
+    50% {
+      -webkit-transform: translate(-100%, 25%);
+              transform: translate(-100%, 25%);
+    }
+    100% {
+      -webkit-transform: translate(100%, 0%);
+              transform: translate(100%, 0%);
+    }
+  }
+}
 .media__img-right {
   position: absolute;
   right: 10%;
@@ -662,6 +753,17 @@ body::-webkit-scrollbar-thumb {
   aspect-ratio: 1/1;
   -o-object-fit: contain;
      object-fit: contain;
+}
+@media (max-width: 767.98px) {
+  .media__img-right {
+    right: auto;
+    left: 50%;
+    top: 17px;
+    width: 18.3486238532%;
+    -webkit-transform: rotate(18deg);
+        -ms-transform: rotate(18deg);
+            transform: rotate(18deg);
+  }
 }
 .media__img-left {
   position: absolute;
@@ -675,6 +777,15 @@ body::-webkit-scrollbar-thumb {
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media (max-width: 767.98px) {
+  .media__img-left {
+    width: 25.6880733945%;
+    left: 20%;
+    -webkit-transform: rotate(-15deg);
+        -ms-transform: rotate(-15deg);
+            transform: rotate(-15deg);
+  }
+}
 .media__curent-left {
   position: absolute;
   bottom: -5%;
@@ -686,6 +797,11 @@ body::-webkit-scrollbar-thumb {
   aspect-ratio: 315/377;
   -o-object-fit: contain;
      object-fit: contain;
+}
+@media (max-width: 767.98px) {
+  .media__curent-left {
+    left: 45%;
+  }
 }
 .media__curent-right {
   position: absolute;
@@ -699,11 +815,23 @@ body::-webkit-scrollbar-thumb {
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media (max-width: 767.98px) {
+  .media__curent-right {
+    display: none;
+  }
+}
 
 .about {
   background: url(../img/About.png) 0 0/cover no-repeat;
   padding-top: 130px;
   padding-bottom: 120px;
+}
+@media (max-width: 767.98px) {
+  .about {
+    background: #000;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 .about__container {
   overflow: hidden;
@@ -776,6 +904,12 @@ body::-webkit-scrollbar-thumb {
     font-size: 0.875rem;
   }
 }
+@media (max-width: 767.98px) {
+  .title {
+    line-height: 55px;
+  }
+}
+
 .nav-about {
   overflow: hidden;
 }
@@ -859,26 +993,9 @@ body::-webkit-scrollbar-thumb {
   padding-top: 210px;
   padding-bottom: 200px;
 }
-@media (min-width: 83.25em) {
+@media (max-width: 767.98px) {
   .portfolio {
-    padding-top: 13.125rem;
-  }
-}
-@media (min-width: 20em) and (max-width: 83.25em) {
-  @supports (padding-top: clamp( 0.375rem , -3.6566205534rem  +  20.1581027668vw , 13.125rem )) {
-    .portfolio {
-      padding-top: clamp( 0.375rem , -3.6566205534rem  +  20.1581027668vw , 13.125rem );
-    }
-  }
-  @supports not (padding-top: clamp( 0.375rem , -3.6566205534rem  +  20.1581027668vw , 13.125rem )) {
-    .portfolio {
-      padding-top: calc(0.375rem + 12.75 * (100vw - 20rem) / 63.25);
-    }
-  }
-}
-@media (max-width: 20em) {
-  .portfolio {
-    padding-top: 0.375rem;
+    padding-top: 10px;
   }
 }
 .portfolio__title {
@@ -1092,142 +1209,64 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-@media (max-width: 767.98px) {
-  .hero__container {
-    padding-right: 0px;
+@media (max-width: 991.98px) {
+  .menu-icon {
+    display: block;
+    position: relative;
+    height: 18px;
+    width: 30px;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    z-index: 2;
   }
-  .hero--margin {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-  .hero__container::before {
-    display: none;
-  }
-  .hero__container::after {
-    display: none;
-  }
-  .media__curent-right {
-    display: none;
-  }
-  .media__curent-left {
-    left: 45%;
-  }
-  .media__img-right {
-    right: auto;
-    left: 50%;
-    top: 17px;
-    width: 18.3486238532%;
-    -webkit-transform: rotate(18deg);
-        -ms-transform: rotate(18deg);
-            transform: rotate(18deg);
-  }
-  .media__img-left {
-    width: 25.6880733945%;
-    left: 20%;
-    -webkit-transform: rotate(-15deg);
-        -ms-transform: rotate(-15deg);
-            transform: rotate(-15deg);
-  }
-  .hero__content {
-    gap: 0px;
-  }
-  .title {
-    line-height: 55px;
-  }
-  .about {
-    background: #000;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .media__photo-people {
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px 0px;
-  }
-  .media__photo-people::after {
+  .menu-icon::before,
+  .menu-icon::after,
+  .menu-icon span {
     content: "";
+    height: 2px;
+    width: 100%;
     position: absolute;
     left: 0;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    background-color: #fff;
+  }
+  .menu-icon::before {
     top: 0;
-    width: 280px;
-    height: 280px;
-    background: -webkit-gradient(linear, left top, right top, from(hsla(276, 100%, 50%, 0.6)), color-stop(36.9%, hsla(104, 100%, 55%, 0.6)), color-stop(67.4%, hsla(0, 100%, 50%, 0.6)), to(hsla(227, 100%, 50%, 0.6)));
-    background: linear-gradient(90deg, hsla(276, 100%, 50%, 0.6) 0%, hsla(104, 100%, 55%, 0.6) 36.9%, hsla(0, 100%, 50%, 0.6) 67.4%, hsla(227, 100%, 50%, 0.6) 100%);
-    opacity: 0.3;
-    -webkit-filter: blur(40px);
-            filter: blur(40px);
-    -webkit-animation: circular-motion-top 10s linear infinite;
-            animation: circular-motion-top 10s linear infinite;
   }
-  @-webkit-keyframes circular-motion-top {
-    0% {
-      -webkit-transform: translate(0, 0);
-              transform: translate(0, 0);
-    }
-    50% {
-      -webkit-transform: translate(100%, -25%);
-              transform: translate(100%, -25%);
-    }
-    100% {
-      -webkit-transform: translate(-100%, 0%);
-              transform: translate(-100%, 0%);
-    }
-  }
-  @keyframes circular-motion-top {
-    0% {
-      -webkit-transform: translate(0, 0);
-              transform: translate(0, 0);
-    }
-    50% {
-      -webkit-transform: translate(100%, -25%);
-              transform: translate(100%, -25%);
-    }
-    100% {
-      -webkit-transform: translate(-100%, 0%);
-              transform: translate(-100%, 0%);
-    }
-  }
-  .media__photo-people::before {
-    content: "";
-    position: absolute;
-    right: 0;
+  .menu-icon::after {
     bottom: 0;
-    width: 280px;
-    height: 280px;
-    background: -webkit-gradient(linear, left top, right top, from(hsla(276, 100%, 50%, 0.6)), color-stop(36.9%, hsla(104, 100%, 55%, 0.6)), color-stop(67.4%, hsla(0, 100%, 50%, 0.6)), to(hsla(227, 100%, 50%, 0.6)));
-    background: linear-gradient(90deg, hsla(276, 100%, 50%, 0.6) 0%, hsla(104, 100%, 55%, 0.6) 36.9%, hsla(0, 100%, 50%, 0.6) 67.4%, hsla(227, 100%, 50%, 0.6) 100%);
-    opacity: 0.3;
-    -webkit-filter: blur(40px);
-            filter: blur(40px);
-    -webkit-animation: circular-motion-bottom 15s linear infinite;
-            animation: circular-motion-bottom 15s linear infinite;
   }
-  @-webkit-keyframes circular-motion-bottom {
-    0% {
-      -webkit-transform: translate(0, 0);
-              transform: translate(0, 0);
-    }
-    50% {
-      -webkit-transform: translate(-100%, 25%);
-              transform: translate(-100%, 25%);
-    }
-    100% {
-      -webkit-transform: translate(100%, 0%);
-              transform: translate(100%, 0%);
-    }
+  .menu-icon span {
+    top: 50%;
+    -webkit-transform: translate(0px, -50%);
+        -ms-transform: translate(0px, -50%);
+            transform: translate(0px, -50%);
   }
-  @keyframes circular-motion-bottom {
-    0% {
-      -webkit-transform: translate(0, 0);
-              transform: translate(0, 0);
-    }
-    50% {
-      -webkit-transform: translate(-100%, 25%);
-              transform: translate(-100%, 25%);
-    }
-    100% {
-      -webkit-transform: translate(100%, 0%);
-              transform: translate(100%, 0%);
-    }
+  .menu-open .menu-icon::before {
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: 50%;
+    margin-top: -1px;
+  }
+  .menu-open .menu-icon::after {
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    bottom: 50%;
+    margin-bottom: -1px;
+  }
+  .menu-open .menu-icon span {
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+  }
+  .menu-open .menu {
+    right: 0;
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
   }
 }
