--- a/lesson_22/scss/style.scss
+++ b/lesson_22/scss/style.scss
@@ -26,7 +26,7 @@ $containerWidth: $maxWidthContainer + $containerPadding;
 body {
   font-family: "OpenSans", sans-serif;
   font-weight: 600;
-  background-color: #ffffff;
+  background-color: #0866ff;
 }
 .wrapper {
   min-height: 100%;
@@ -44,49 +44,47 @@ body {
   margin: 0 auto;
 }
 
-.wrapper {
-}
 .page {
-  padding-block: toRem(120);
-}
-.questions {
-  // .questions__container
+  // .page__container
 
   &__container {
+    padding: toRem(150) 0;
+    *:not(:last-child) {
+      margin-bottom: toRem(20);
+    }
   }
 
-  // .questions__item
+  // .page__homework
 
-  &__item *:not(:last-child) {
-    margin-bottom: toRem(20);
+  &__homework {
   }
 }
-.item-question {
-  // .item-question__task
-
-  &__task {
-  }
-
-  // .item-question__title
+.homework {
+  // .homework__title
 
   &__title {
   }
-
-  // .item-question__list
-
-  &__list {
-    list-style: none;
-    counter-reset: JediCSS;
+}
+.title {
+  font-size: toRem(36);
+  color: #fff;
+  text-align: center;
+}
+details {
+  background-color: azure;
+  border-radius: toRem(20);
+  min-height: toRem(150);
+  summary:last-of-type {
+    padding: toRem(20) toRem(20) 0 toRem(20);
+    line-height: toRem(25);
   }
-
-  // .item-question__answer
-
-  &__answer {
+  p:last-of-type {
+    padding: toRem(0) toRem(10) toRem(20) toRem(40);
+    font-size: toRem(20);
+    line-height: toRem(25);
+    color: rgb(43, 165, 43);
   }
-
-  // .item-question__answer--correct
-
-  &__answer--correct {
-    background-color: green;
-  }
+}
+span {
+  font-size: toRem(24);
 }
