--- a/lesson_19-3/scss/style.scss
+++ b/lesson_19-3/scss/style.scss
@@ -830,7 +830,7 @@ body {
   &__submenu {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 13%;
     width: 100%;
     display: flex;
     justify-content: space-between;
