--- a/lesson_19-3/css/style.css
+++ b/lesson_19-3/css/style.css
@@ -523,6 +523,9 @@ body {
 .brand {
   margin-bottom: 5.625rem;
 }
+.brand__title {
+  display: none;
+}
 .brand__list {
   display: -webkit-box;
   display: -ms-flexbox;
